# quick-folder

./: .gitignore  AGENTS.md  App.tsx  CHANGELOG.md  CLAUDE.md  Plan_FontMerge.md  Plan_GIF.md  Plan_Pixelate.md  Plan_movie_compression.md  README.md  build.bat  build.ps1  electron-env.d.ts  global.d.ts  index.css  index.html  index.tsx  metadata.json  package-lock.json  package.json  plan.md  project_documentation.md  tsconfig.json  types.ts  update.json  vite.config.ts  vitest.config.ts
.claude/: settings.local.json
.omc/: project-memory.json
.serena/: project.yml
components/: AppModals.tsx  AppSidebar.tsx  CategoryColumn.tsx  HelpModal.tsx  LanguageSettingsModal.tsx  SortableShortcutItem.tsx  TaskQueuePanel.tsx  TempFileTray.tsx  ThemeSettingsModal.tsx  ToastContainer.tsx  UpdateFailedModal.tsx  UpdateModal.tsx  ZoomModal.tsx
docs/: AUTO_UPDATE_GUIDE.md  AUTO_UPDATE_SETUP.md  refactoring-phase3-plan.md
electron/: main.ts  preload.ts
hooks/: internalDragState.ts  useAutoUpdate.ts  useCategoryManagement.ts  useTauriDragDrop.ts  useThemeManagement.ts  useWindowState.ts
scripts/: setup-auto-update.sh
src-tauri/: Cargo.toml  Info.plist  build.rs  entitlements.plist  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/.omc/state/: agent-replay-1653c7e3-f162-4dbb-a306-389bc32b56d9.jsonl  idle-notif-cooldown.json  last-tool-error.json  mission-state.json  subagent-tracking.json
src-tauri/capabilities/: default.json
src-tauri/icons/: QuickFolder.psd  icon.icns
src-tauri/src/: helpers.rs  lib.rs
src-tauri/src/modules/: archive_ops.rs  constants.rs  error.rs  file_ops.rs  hwp_ops.rs  image_ops.rs  laigter_maps.rs  media_ops.rs  mod.rs  types.rs
src-tauri/src/modules/archive_ops/: extract.rs  listing.rs  materialize.rs  path.rs  records.rs
src-tauri/src/modules/file_ops/: archive.rs  cache.rs  listing.rs  mutation.rs  transfer.rs
src-tauri/src/modules/file_ops/transfer/: duplicate.rs  folder_merge.rs  progress.rs
src-tauri/src/modules/image_ops/: background.rs  compression.rs  convert.rs  dimensions.rs  font.rs  heavy.rs  pixelate.rs  sprite.rs  thumbnail.rs
src-tauri/src/modules/media_ops/: gif.rs  thumbnail.rs  video.rs
src-tauri/src/modules/media_ops/video/: compress.rs  concat.rs  edit.rs  gif.rs  progress.rs
src-tauri/src/modules/system_ops/: clipboard.rs  file_explorer.rs  file_icon.rs  file_search.rs  google_drive.rs  mod.rs
src-tauri/src/modules/system_ops/file_icon/: cache.rs  native.rs  text.rs
src-tauri/src/modules/system_ops/file_icon/native/: fallback.rs  macos.rs  windows.rs
src-tauri/src/modules/tool_ops/: ffmpeg.rs  fonttools.rs  ghostscript.rs  mod.rs
src-tauri/src/modules/tool_ops/fonttools/: archive.rs  install.rs  merge.rs  paths.rs  python.rs
src-tauri/src/modules/tool_ops/ghostscript/: download.rs  install.rs  macos.rs  path.rs  pdf.rs  windows.rs
src-tauri/tests/: command_boundary.rs
stores/: taskQueueStore.ts
tests/: archiveNavigation.test.ts  i18n.test.ts  keyboardShortcuts.test.ts  lineDiff.test.ts  naturalCompare.test.ts  storage.test.ts  tauriInvoke.test.ts
tests/ui/: setup.ts  (+9 more)
utils/: caseConvert.ts  folderMerge.ts  fuzzyMatch.ts  i18n.ts  isComparableTextFile.ts  isTauri.ts  keyboardShortcuts.ts  lineDiff.ts  naturalCompare.ts  pathUtils.ts  readTextFileWithTimeout.ts  storage.ts  tauriCommandRunner.ts  tauriCommands.ts  tauriInvoke.ts
wiki/: README.md
(+211 files in other folders)
