[package]
name = "app"
version = "1.27.44"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(feature, values("cargo-clippy"))'] }

# ─── 개발 빌드 속도 최적화 ──────────────────────────────────────────────
# 적용 직후 1회는 전체 재컴파일이 일어나며, 이후 증분 빌드와 링크가 빨라진다.
[profile.dev]
# 전체 디버그 심볼(2) 대신 라인 테이블만 생성 → 링크 시간·디스크 사용량 감소
debug = 1

# 외부 의존성은 한 번만 컴파일되어 캐시되므로, 최적화해도 반복 빌드 속도에는 영향이 없고
# 런타임(이미지/압축/폰트 처리 등) 성능만 향상된다.
[profile.dev.package."*"]
opt-level = 2

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
arboard = "3"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10", features = ["protocol-asset"] }
tauri-plugin-log = "2"
tauri-plugin-opener = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2.6"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "webp", "bmp", "ico"] }
base64 = "0.22"
trash = "5"
psd = "0.3"
tauri-plugin-drag = "2"
zip = { version = "2", default-features = false, features = ["deflate"] }
encoding_rs = "0.8"
hwarang = { version = "0.2", default-features = false }
walkdir = "2"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
ureq = { version = "3", default-features = true }
ffmpeg-sidecar = "2"
ico = "0.3"
icns = "0.3"
ttf-parser = "0.24"
dirs = "6.0.0"
filetime = "0.2"

[dev-dependencies]
tauri = { version = "2.10", features = ["test"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
block = "0.1"
xattr = "1"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["shellapi", "wingdi", "winuser", "combaseapi", "objbase", "winerror", "winbase", "winreg", "unknwnbase"] }
